ffm testing